<resources>
    <string name="app_name">GlobalTour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions">questions</string>
    <string name="label">label</string>
    <string name="ask">Ask</string>
    <string name="send">send</string>
    <string name="List">List</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add">add</string>
    <string name="name">name</string>
    <string name="proficiency">proficiency</string>
    <string name="email">email</string>
    <string name="country">country</string>
    <string name="devprofile">DevProfile</string>
    <string name="skill">skill</string>
    <string name="profile">profile</string>
</resources>