<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".qestions.QuestionsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/question_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/questions"
        app:startIconDrawable="@drawable/ic_favorite_filled"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:startIconContentDescription="@string/questions"
        app:startIconDrawable="@drawable/ic_favorite_filled"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/questionButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        app:icon="@drawable/ic_baseline_send_24"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        tools:ignore="MissingConstraints" />





</androidx.constraintlayout.widget.ConstraintLayout>